--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,16 +14,13 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="works.html">Works</a>
         </nav>
     </header>
     
     <main>
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <img src="img/artwork1.jpg" alt="Artwork 1">
-            <img src="img/artwork2.jpg" alt="Artwork 2">
-            <img src="img/artwork3.jpg" alt="Artwork 3">
-        </div>
+        <h2>Welcome to My Portfolio</h2>
+        <p>Explore my paintings and creative works by visiting the works page.</p>
     </main>
     
     <footer>
