--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Art Portfolio</title>
+    <title>Coal Paper Layers</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Art Portfolio</h1>
+        <h1>Coal Paper Layers</h1>
         <nav>
             <a href="index.html">Home</a>
+            <a href="works.html">Works</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="works.html">Works</a>
         </nav>
     </header>
     
     <main>
-        <h2>Welcome to My Portfolio</h2>
-        <p>Explore my paintings and creative works by visiting the works page.</p>
-    </main>
+    <h2>Artworks of Manas Ranjan</h2>
+    <p>My work delves into the complex ways we rationalize our actions and emotions, exploring the narratives we construct to make sense of our behavior, especially under the weight of strong feelings. Through the use of translucent vellum, I print on both sides, layering the sheets to create depth and complexity. The transparency of the vellum reflects the fragile yet pervasive lies we tell ourselves—thin and often unnoticed, but essential in shaping our perception of reality.</p>
+
+    <p>Occasionally, my work takes the form of a triptych, where each panel doesn’t represent past, present, or future, but instead offers three alternative narratives of the same lie. These panels illustrate how, regardless of our actions, we tend to rationalize them in ways that protect our self-perception, often distorting the truth. The triptych format underscores the cyclical nature of these justifications, which act as a buffer between us and uncomfortable realities.</p>
+
+    <p>In some pieces, my focus shifts to the rawness of emotion itself. The act of hacking a fruit or vegetable, rather than simply cutting it, becomes a metaphor for releasing pent-up anger or frustration. It evokes that primal moment when we channel our emotions into something physical, perhaps imagining the object of our anger to be that fruit or vegetable. This imagery is a reflection of how we sometimes externalize our internal turmoil, seeking an outlet for our emotions when words or rationalization are no longer enough.</p>
+
+    <p>At times, my work also reflects on the fluidity of memory. When we try to recall a moment from the past, we do so through the lens of our current emotional state, altering how we remember the event. In these pieces, the triptych format allows me to show how our recollections shift depending on our feelings at the time, highlighting how the same moment can be remembered in vastly different ways.</p>
+
+    <p>Ultimately, my work seeks to ask whether rationalization is a virtue—something that helps us survive emotional conflict and painful truths—or if it is a weakness that separates us from our own reality. Does it allow us to endure, or does it trap us in a cycle of illusion? And, similarly, when we lash out in raw emotion, are we simply confronting our truth in a more visceral way, or are we further distorting it? Through these layered, multi-dimensional pieces, I invite viewers to reflect on the tension between self-protection and self-deception, and to consider how the stories we tell ourselves—whether through memory, rationalization, or raw emotion—shape our connection to ourselves and the world around us.</p>
+</main>
     
     <footer>
-        <p>&copy; 2025 My Art Portfolio. All rights reserved.</p>
+        <p>&copy; 2025 Coal Paper Layers. All rights reserved.</p>
     </footer>
 </body>
 </html>
